appId: com.google.android.contacts
tags:
 - smoke

env:
    USERTEST: 1

---
- launchApp:
    clearState: true


- repeat:
    times: ${USERTEST}
    commands:
    - tapOn: ${output.contact_create.BtnCreate}
    - takeScreenshot:
        path: "home_list"
    - tapOn: ${output.contact_create.InputFirstName}
    - eraseText: 100
    - inputText: "Test"
    - pressKey: enter
    - tapOn: ${output.contact_create.InputLastName}
    - eraseText: 100
    - inputText: ${faker.name().lastName()}
    - pressKey: enter
    - tapOn: ${output.contact_create.InputCompany}
    - inputText: "${faker.company().name()}-QA"
    - swipe:
        direction: UP
    - tapOn: "+1"
    - inputText: ${faker.phoneNumber().cellPhone()}
    - tapOn: "${output.contact_create.BtnSave}"
    - waitForAnimationToEnd
    - takeScreenshot:
        path: "list_user_create"
    - back
- stopRecording